# postman-auto-collection

./: .gitignore  Makefile  pyproject.toml
postman_auto_collection/: cli.py
postman_auto_collection/parsers/: __init__.py  fastapi.py
scripts/: compile_language.py  test_ai.py  test_tree_sitter.py
